# cvpl_tools

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  mypy.ini  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: sphinx.yml
API/: algs.html  imfs.html  napari_zarr.html  ndblock.html  ome_zarr_io.html  seg_process.html  tlfs.html
GettingStarted/: beta_amyloid_plaque_detection.html  boilerplate.html  dev_setup.html  nnunet.html  ome_zarr.html  quick_start.html  result_caching.html  segmentation_pipeline.html  setting_up_the_script.html
_sources/: index.rst.txt
_sources/API/: algs.rst.txt  napari_zarr.rst.txt  ome_zarr_io.rst.txt  seg_process.rst.txt
_sources/GettingStarted/: beta_amyloid_plaque_detection.rst.txt  boilerplate.rst.txt  nnunet.rst.txt  ome_zarr.rst.txt  result_caching.rst.txt  segmentation_pipeline.rst.txt  setting_up_the_script.rst.txt
docs/: annotator_db_schema.dia  conf.py  index.rst  requirements.txt
docs/API/: imfs.rst  napari_zarr.rst  ndblock.rst  seg_process.rst  tlfs.rst
docs/GettingStarted/: beta_amyloid_plaque_detection.rst  boilerplate.rst  dev_setup.rst  nnunet.rst  ome_zarr.rst  quick_start.rst  result_caching.rst  segmentation_pipeline.rst  setting_up_the_script.rst
examples/: mousebrain_processing.py  test_coiled.py  test_setup.py  test_viewer.py
src/cvpl_tools/: array_key_dict.py  dataset_reference.py  fs.py  fsspec.py  np_algs.py  persistence.py  reader_from_cmd.py  strenc.py
src/cvpl_tools/examples/: mousebrain_processing.py  mousebrain_processing_inspect.py  (+1 more)
(+44 files in other folders)
